generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model User {
  id            String      @id @default(cuid())
  name          String?
  email         String?     @unique
  emailVerified DateTime?
  image         String?
  password      String?
  role          UserRole    @default(USER)
  contactNumber String?
  address       String?
  accounts      Account?
  Cart          Cart[]
  restaurant    Restaurant?
  Order         Order[]
}

model Account {
  id                String  @id @default(cuid())
  userId            String  @unique
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Restaurant {
  id          String  @id @default(cuid())
  adminId     String  @unique
  name        String
  cuisine     Cuisine
  address     String
  phone       String
  description String?
  carts       Cart[]
  menu        Menu?
  admin       User    @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@index([cuisine, id])
}

model Menu {
  id           String     @id @default(cuid())
  restaurantId String     @unique
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  items        MenuItem[]

  @@index([restaurantId])
}

model MenuItem {
  id          String     @id @default(cuid())
  menuId      String
  name        String
  description String?
  price       Float
  image       String
  CartItem    CartItem[]
  menu        Menu       @relation(fields: [menuId], references: [id], onDelete: Cascade)

  @@index([menuId])
}

model Cart {
  id           String     @id @default(cuid())
  userId       String
  user         User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  items        CartItem[]
  Order        Order[]

  @@index([userId])
}

model CartItem {
  id         String   @id @default(cuid())
  cartId     String
  menuItemId String
  quantity   Int
  cart       Cart     @relation(fields: [cartId], references: [id], onDelete: Cascade)
  menuItem   MenuItem @relation(fields: [menuItemId], references: [id], onDelete: Cascade)

  @@index([cartId])
}

model Order {
  id          String      @id @default(cuid())
  userId      String
  user        User        @relation(fields: [userId], references: [id])
  cartId      String
  cart        Cart        @relation(fields: [cartId], references: [id])
  status      OrderStatus
  totalAmount Float
  createdAt   DateTime    @default(now())

  @@index([userId])
}

enum UserRole {
  USER
  ADMIN
}

enum Cuisine {
  ITALIAN
  NORTH_INDIAN
  PUNJABI
  SOUTH_INDIAN
  GUJARATI
  CHINESE
}

enum OrderStatus {
  PENDING
  PROCESSING
  COMPLETED
  CANCELLED
}
